Changes in Release 1.4.0
=============================================
[JXT-88] - AbstractXMLObject unnecessarily creates a new QName in getElementQName
[JXT-93] - X509Util.determineEntityCertificate doesn't catch lower layer SecurityException

Changes in Release 1.3.4
=============================================
[JXT-84] - XSBoolean missing local name, QName and object providers
[JXT-85] - Update 3rd party library
[JXT-86] - Clean up maven assembly description

Changes in Release 1.3.3
==============================================
[JXT-78] - XSBoolean does not extend XMLObject
[JXT-79] - Disable RSA v1.5 key transport in favor of RSA-OAEP for all data encryption key types
[JXT-80] - Update 3rd party runtime library dependencies
[JXT-81] - InlineX509DataProvider should handle X.500 DN string parsing failures more gracefully
[JXT-82] - ListView's clear empties the whole backingList instead of only the entries it's responsible for
[JXT-83] - IndexedXMLObjectChildrenList ListView indexOf and lastIndexOf methods operate on the wrong data

Changes in Release 1.3.2
==============================================
[JXT-73] - DetachedSignatureTest failure
[JXT-74] - Some pom changes for XMLTooling
[JXT-77] - Update POM for Shib.net Repo and attach generated Javadocs
[JOST-119] - change pom to create attached -sources jar
[JOST-136] - Update Version class with getVersion() and getName() static methods
[JOST-157] - references to spaces.internet.edu may need changed to wiki.shibboleth.net

Changes in Release 1.3.1
==============================================
[JXT-71] - Static helper classes should not use static Loggers
[JXT-72] - Update dependency libs for 1.3.1

Changes in Release 1.3.0
==============================================
[JXT-28] - Implement better support for xsi:nil
[JXT-29] - Support for dateTime schema type
[JXT-60] - Add interfaces and helpers for the global attributes from the 'xml' namespace